--- a/flex-projeto/style.css
+++ b/flex-projeto/style.css
@@ -24,6 +24,8 @@ div img{
     max-width: 992px;
     margin: auto;
     width: 100%;
+    min-width: 320px;
+    padding: 10px 15px;
 }
 
 header{
@@ -58,7 +60,7 @@ header .menu{
 
 .apresentacao .texto-apresentacao{
     min-height: 200px;
-}
+ }
 
 .texto-apresentacao h1{
     color: #122A57;
@@ -147,7 +149,7 @@ header .menu{
     color: #122A57;
     font-size: 12px;
     text-decoration: none;
-    font-weight: 700px;
+    font-weight: 700;
 }
 
 .item-servico p{
@@ -165,6 +167,7 @@ header .menu{
 #planos{
     flex-direction: column;
     min-height: 100vh;
+    padding-top: 50px;
 }
 
 .list-planos{
@@ -180,6 +183,7 @@ header .menu{
     margin-right: 20px;
     padding: 10px;
     max-width: 240px;
+ 
 }
 
 .item-plano .btn{
@@ -214,7 +218,74 @@ header .menu{
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
+}
 
 .item-plano ul li ::before{
     content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #122A57;
+    margin-right: 5px;
 }
+
+footer{
+    background-color: #122A57;
+    height: 70px;
+    display: flex;
+    align-items: center;
+}
+
+footer .footer{
+    justify-content:space-between;
+    color: #fff;
+
+}
+
+/*Mobile
+
+@media(max-width: 992px){
+    .flex-container{
+        flex-direction: column;
+    }
+}
+
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+
+    .apresentacao .texto-apresentacao{
+         width: 100%;
+    }
+
+    #quem-somos{
+        flex-direction: column-reverse;
+    }
+
+    #quem-somos img{
+        min-width: 320px;
+        margin: auto;
+    }
+
+    .list-servicos{
+        flex-direction: column;
+    }
+
+    .item-servico img{
+        width: 50%;
+        margin: auto;
+    }
+
+    .list-planos{
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+
+    .list-planos .item-plano{
+        max-width: 90%;
+        margin: auto;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    
+*/
